--- a/BingoCard.html
+++ b/BingoCard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex">
   <title>ビンゴカード</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap&text=1234567890free" rel="stylesheet" />
   <style>
     /* カラーパレット・CSS変数 */
     :root {
