--- a/sanrentan.html
+++ b/sanrentan.html
@@ -264,7 +264,7 @@
   </div>
 
   <footer>
-    <p><a href="https://ht-ota.github.io/kensyu_ryoko/sanrentan-rule.html" target="_blank" rel="noopener noreferrer" style="text-decoration:none; color:#666;>ルール</a></p>
+    <p><a href="https://ht-ota.github.io/kensyu_ryoko/sanrentan-rule.html" target="_blank" rel="noopener noreferrer" style="text-decoration:none; color:#666;">ルール</a></p>
     <p>&copy; Japan Sanrentan Association (ウソ)</p>
   </footer>
 
